# C700

./: AudioFile.cpp  AudioFile.h  C700.cpp  C700DSP.cpp  C700DSP.h  C700Driver.cpp  C700Driver.h  C700Edit.cpp  C700GUI.cpp  C700GUI.h  C700Kernel.cpp  C700Kernel.h  C700Parameters.cpp  C700Properties.h  C700TimeThread.h  C700VST.cpp  C700_CocoaViewFactory.mm  C700defines.h  CLAUDE.md  CMakeLists.txt  ChunkReader.cpp  ChunkReader.h  DataBuffer.cpp  DataBuffer.h  DspController.cpp  DspRegFIFO.cpp  DspRegFIFO.h  DynamicVoiceAllocator.cpp  DynamicVoiceAllocator.h  EchoKernel.cpp  EfxAccess.cpp  EfxAccess.h  GUIUtils.cpp  LabelOnOffButton.cpp  LabelOnOffButton.h  MemManager.cpp  MidiDriverBase.cpp  MidiDriverBase.h  MyKnob.h  MySlider.cpp  (+24 more)
commusb/: ControlUSB.h
docs/decisions/: active.md
docs/notes/: build_ubuntu.md  m8_continuation_state.md  m8_ui_reconstruction_advisory.md
encodetest/: enccodetest.cpp
noveclib/: czt.cpp  fft.cpp  fft_czt.h
scripts/: build-install.sh
src/platform/: PathUtils.cpp
src/plugin/: C700Adapter.cpp  C700Adapter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
